1. Font issue sorted a. humanwisdom project b. life stories c. events d. wisdom shorts e. testimonials 2. font removed removed from all the personalised for you dashboard’s podcast 3. Wisdom story/life story changes a. All stories are subject to approval - centre alignment b. Story timing removed c. Title changed from wisdom stories to life stories

--- a/program/src/assets/font/font_weight.css
+++ b/program/src/assets/font/font_weight.css
@@ -1,4 +1,9 @@
 /* font weight */
+.fw_300 
+{
+    font-weight: 300;
+}
+
 .fw_400 
 {
     font-weight: 400;
